--- a/directus-router.yaml
+++ b/directus-router.yaml
@@ -4,4 +4,7 @@ mapping:
   request_field: field_for_deprecated_url
   target_field: field_for_target_site
   status_field: field_for_status_code
-
+additionalFilters:
+  some_field.id:
+    operator: _eq
+    value: 1
